--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
-  "name": "crypto_exchange",
+  "homepage": "http://amikhaylova.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fontsource/vollkorn": "^4.4.5",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-onclickoutside": "^6.11.2",
     "react-scripts": "4.0.3",
+    "react-use": "^17.2.4",
+    "swr": "^0.5.6",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.1"
   }
 }
