--- a/.eslintrc
+++ b/.eslintrc
@@ -3,14 +3,12 @@
         "airbnb-typescript",
         "airbnb/hooks",
         "plugin:@typescript-eslint/recommended",
-        "plugin:jest/recommended",
         "plugin:prettier/recommended"
     ],
-    "plugins": ["react", "@typescript-eslint", "jest"],
+    "plugins": ["react", "@typescript-eslint"],
     "env": {
         "browser": true,
-        "es6": true,
-        "jest": true
+        "es6": true
     },
     "globals": {
         "Atomics": "readonly",
